# backend

chatbot_prod-main/chatbot_prod-main/: Dockerfile  README.md  broadcast_template.py  customer_agent_runner.py  main.py  package-lock.json  pyproject.toml  requirements.txt
chatbot_prod-main/chatbot_prod-main/agents/egenie/customer_agent/: graph.py  llm.py  models.py  prompts.py  requirements.txt  tools.py
chatbot_prod-main/chatbot_prod-main/agents/egenie/products_agent/: methods.py  product_suggestions.py
chatbot_prod-main/chatbot_prod-main/agents/followup_agent/: follow_up_agent.py
chatbot_prod-main/chatbot_prod-main/agents/support_agent/: agent.py
chatbot_prod-main/chatbot_prod-main/api/: __init__.py  ai_routes.py  automation_routes.py  canned_responses_routes.py  clerk_routes.py  common_routes.py  dashboard_routes.py  google_routes.py  google_sheets_routes.py  ig_routes.py  integrations.py  security_routes.py  signup_routes.py  sse_routes.py  wa_bot_routes.py  wa_routes.py  webhook_routes.py  websockets_routes.py
chatbot_prod-main/chatbot_prod-main/auth/: auth_utils.py  dependencies.py  models.py  service.py
chatbot_prod-main/chatbot_prod-main/config/: settings.py
chatbot_prod-main/chatbot_prod-main/core/: lifespan.py  logger.py  managers.py  scheduler.py  services.py
chatbot_prod-main/chatbot_prod-main/database/: __init__.py
chatbot_prod-main/chatbot_prod-main/schemas/: models.py
chatbot_prod-main/chatbot_prod-main/services/: agent_service.py  ai_chatbot.py  automation_actions.py  automation_execution.py  automation_scheduler.py  automation_scheduler_worker.py  automation_service.py  automation_trigger_handler.py  canned_responses_service.py  chat_analysis_service.py  clerk_service.py  cloudinary_service.py  common_service.py  contacts_service.py  conversation_utils.py  dashboard_service.py  followup_agent_service.py  google_sheet_automation.py  google_sheets_scheduler.py  heidelai_bot.py  ig_service.py  payment_service.py  pma_chatbot.py  products_service.py  scheduler_service.py  utils.py  wa_bot_service.py  wa_service.py  webhook_service.py  websocket_service.py
