[tool.poetry]
name = "heidelai-backend"
version = "0.1.0"
description = ""
authors = ["sahill3 <sahil.mandavkar3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agno = "1.7.7"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.15"
aiosignal = "1.4.0"
annotated-types = "0.7.0"
anyio = "4.10.0"
apscheduler = "3.11.0"
attrs = "25.3.0"
cachetools = "5.5.2"
certifi = "2025.8.3"
charset-normalizer = "3.4.2"
click = "8.2.1"
cloudinary = "1.44.1"
colorama = "0.4.6"
deprecation = "2.1.0"
dnspython = "2.7.0"
docstring-parser = "0.17.0"
ecdsa = "0.19.1"
fastapi = "0.116.1"
filetype = "1.2.0"
frozenlist = "1.7.0"
gitdb = "4.0.12"
gitpython = "3.1.45"
google-ai-generativelanguage = "0.6.18"
google-api-core = "2.25.1"
google-auth = "2.40.3"
google-genai = "1.28.0"
googleapis-common-protos = "1.70.0"
gotrue = "2.12.3"
grandalf = "0.8"
grpcio = "1.74.0"
grpcio-status = "1.74.0"
h11 = "0.16.0"
h2 = "4.2.0"
hpack = "4.1.0"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
hyperframe = "6.1.0"
idna = "3.10"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
langchain-core = "0.3.72"
langchain-google-genai = "2.1.9"
langgraph = "0.6.3"
langgraph-checkpoint = "2.1.1"
langgraph-prebuilt = "0.6.3"
langgraph-sdk = "0.2.0"
langsmith = "0.4.11"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
multidict = "6.6.3"
orjson = "3.11.1"
ormsgpack = "1.10.0"
packaging = "24.2"
pinecone = "7.3.0"
pinecone-plugin-assistant = "1.7.0"
pinecone-plugin-interface = "0.0.7"
postgrest = "1.1.1"
propcache = "0.3.2"
proto-plus = "1.26.1"
protobuf = "6.31.1"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pydantic-settings = "2.10.1"
pygments = "2.19.2"
pyjwt = "2.10.1"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-jose = "3.5.0"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
realtime = "2.6.0"
requests = "2.32.4"
requests-toolbelt = "1.0.0"
rich = "14.1.0"
rsa = "4.9.1"
shellingham = "1.5.4"
six = "1.17.0"
smmap = "5.0.2"
sniffio = "1.3.1"
starlette = "0.47.2"
storage3 = "0.12.0"
strenum = "0.4.15"
supabase = "2.17.0"
supafunc = "0.10.1"
tenacity = "8.5.0"
tomli = "2.2.1"
typer = "0.16.0"
typing-extensions = "4.14.1"
tzdata = "2025.2"
tzlocal = "5.3.1"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
watchfiles = "1.1.0"
websockets = "15.0.1"
xxhash = "3.5.0"
yarl = "1.20.1"
zstandard = "0.23.0"
pymongo = "^4.13.2"
dateparser = "^1.2.2"
pandas = "^2.3.3"
pydantic = {extras = ["email"], version = "^2.12.4"}
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
